# XanaduXVD

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/: build-and-release.yml  c-cpp.yml
.github/workflows/: build-and-release.yml  cygwin-c-cpp.yml  macos-c-cpp.yml
XanaduCLI/: XanaduCLI.cpp
XanaduGUI/ftxui_proj/: CMakeLists.txt
XanaduGUI/ftxui_proj/src/: main.cpp
src/: XVDCrypto.h  XVDTypes.cpp  XVDTypes.h  XanaduXVD.cpp  XanaduXVD.h
